--- a/showdown-frontend-main/package.json
+++ b/showdown-frontend-main/package.json
@@ -1,7 +1,7 @@
 {
   "name": "showdown-frontend",
   "version": "0.1.0",
-  "homepage": "https://github.com/yeemans/showdown-frontend",
+  "homepage": "/showdown-frontend/#",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
